[gd_scene load_steps=2 format=3 uid="uid://pe8ytj42oysn"]

[ext_resource type="Script" path="res://src/UI/CharacterSheetSubpages/Summary/SkillLine.gd" id="1"]

[node name="SkillLine" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Skill" type="Label" parent="Panel"]
custom_minimum_size = Vector2(110, 40)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Stat" type="Label" parent="Panel2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "STR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaseVal" type="LineEdit" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="MiscBonus" type="LineEdit" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="SkillBonus" type="LineEdit" parent="."]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="Proficient" type="CheckButton" parent="."]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="DoubleProficient" type="CheckButton" parent="."]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="MiscBonus" to="." method="_on_MiscBonus_text_changed"]
[connection signal="button_up" from="Proficient" to="." method="_on_Proficient_button_up"]
[connection signal="button_up" from="DoubleProficient" to="." method="_on_DoubleProficient_button_up"]
